2004-04-19 09:17  PeterB

	* src/balsa-message.c: emit "row-changed" signal after updating the
	attach icon.

2004-04-18  Albrecht Dress

	large GPG patch as in 124905, attachment 26752.
	
2004-04-16  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Added en_CA to ALL_LINGUAS.

2004-04-14  Pawel Salek

	* libbalsa/html.c: change op order to make gtkhtml2 happy.

2004-04-14 05:50  PeterB

	* src/sendmsg-window.c: clear old auto-bcc when changing
	identities, if that's the only bcc entry.
	* src/sendmsg-window.c: be more careful when changing identities.

2004-04-13 21:34  PeterB

	* libbalsa/: imap-server.c, mailbox_imap.c, mailbox_imap.h: lock
	the mailbox in "expunge-notify" handler; remove unnecessary handler
	in imap-server and unused hook in mailbox-imap.

2004-04-12  Pawel Salek

	* libbalsa/misc.c: fix fcntl() locking.
	* src/balsa-icons.[hc]: make "deleted" icon size match other icons.

2004-04-12  Pawel Salek

	* libbalsa/mailbox.[hc]: fetch headers smarter.
	* libbalsa/mailbox_imap.c: provide subclasses for _fetch_headers.
	* libbalsa/mailbox_local.c: ditto.
	* libbalsa/message.[hc]: use it.
	* libbalsa/imap/imap-commands.c: cleanup.
	* src/sendmsg-window.c: make sure we know all the relevant headers.

2004-04-11  Carlos Morgado  <chbm gnome.org>

	* libbalsa/Makefile.am: 
	remove *_DISABLE_DEPRECATED

2004-04-11  Pawel Salek

	* libbalsa/mailbox_imap.c: fetch references and list-post. 
	* libbalsa/message.c: remove unused data. Parse sequences of headers.xo
	* libbalsa/imap/imap-commands.[hc]: simplify fetching code.
	* libbalsa/imap/imap-handle.[hc]: handle HEADER.FIELDS.NOT.

2004-04-07  Pawel Salek

	* libbalsa/mailbox_imap.c: do not quit when talking to non-IMAP servers
	* src/sendmsg-window.c: check message_postpone() return code.

2004-04-07 06:55  PeterB

	* libbalsa/imap/pop3.c: free pop->host.
	* libbalsa/: mailbox_local.c, mailbox_maildir.c, mailbox_mbox.c,
	mailbox_mh.c, message.c, message.h: scrap